--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -19,8 +19,13 @@
   color: white;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+transition: transform 0.1s ease;
+}
+
+.header.hidden {
+  transform: translateY(-100%);
 }
 
 .logo-container {
@@ -213,7 +218,7 @@
 .service-card:hover {
   transform: translateY(-20px);
   box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-  background-color: #dfe986;
+  background-color: #ddec50;
   color: black;
 }
 
@@ -308,7 +313,7 @@
 }
 
 .contact-form button {
-  background-color: #667eea;
+  background-color: #9fb102;
   color: white;
   padding: 15px;
   font-size: 18px;
@@ -320,7 +325,7 @@
 }
 
 .contact-form button:hover {
-  background-color: #5568d3;
+  background-color: #006100;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
@@ -329,9 +334,21 @@
 .footer {
   background-color: #006100;
   color: white;
-  text-align: center;
+  text-align: left;
   padding: 30px;
   font-size: 16px;
+}
+
+.logo-footer {
+width: 200px;  /* Set your desired width (e.g., 60px, 80px, 100px) */
+height: 200px; /* Set your desired height */
+}
+.set-to-margin-top{
+    margin-top: -120px;
+}
+
+.set-to-margin-bottom{
+margin-bottom: 20px;
 }
 
 /* Responsive Design */
@@ -359,6 +376,31 @@
   .services-grid {
     grid-template-columns: 1fr;
   }
+}
+
+.footer-text {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-left: 320px;
+}
+
+.set-to-row {
+    display: flex;
+    flex-direction: row;
+    /* gap: 20px; */
+    justify-content: space-between;
+    width: 1000px;
+}
+
+.set-to-row2 {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.footer-icon{
+    font-size: 24px;
 }
 
 @media (max-width: 640px) {
