--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -1364,6 +1364,14 @@
   cursor: pointer;
   transition: transform 0.3s ease;
 }
+.social-img-colored-email {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  margin-top: 3px;
+  margin-left: 3px;
+  transition: transform 0.3s ease;
+}
 
 .social-img-colored:hover {
   transform: translateY(-5px);
